--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="ColorLib">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <!-- ========== Title ========== -->
-    <title> Evento - Event Html Template</title>
+    <title> Maxi Fest</title>
     <!-- ========== Favicon Ico ========== -->
     <!--<link rel="icon" href="fav.ico">-->
     <!-- ========== STYLESHEETS ========== -->
@@ -758,10 +758,28 @@
                         </h4>
                     </div>
                     <div class="footer_box_body">
-                        <div class="newsletter_form">
-                            <input type="email" class="form-control" placeholder="E-Mail here">
-                            <button class="btn btn-rounded btn-block btn-primary">SUBSCRIBE</button>
-                        </div>
+                        <form id="test-form">
+  
+  <div>
+    <label>Name</label>
+    <input type="text" name="Name" placeholder="name"/>
+  </div>
+
+  <div>
+    <label>ID</label>
+    <input type="text" name="ID" placeholder="BJxxxx/Hxxxx"/>
+  </div>
+  
+  <div>
+    <label>TeamSize</label>
+    <input type="text" name="TeamSize" placeholder="1-3"/>
+  </div>
+
+  <div>
+    <button type="submit"id="submit-form">Submit</button>
+  </div>
+
+</form>
                     </div>
                 </div>
             </div>
