--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <a class="nav-link active" href="#">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link " href="#">Speakers</a>
+                    <a class="nav-link " href="#">Judges</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link " href="#">Events</a>
@@ -80,12 +80,12 @@
                             <h2 class="cover-title">
                                 Prepare yourself for the
                             </h2>
-                            <strong class="cover-xl-text">conference</strong>
+                            <strong class="cover-xl-text">Dance Mania</strong>
                             <p class="cover-date">
-                                12-14 February 2018  - Los Angeles, CA.
+                                1st March 2021  - XLRI, Jamshedpur.
                             </p>
                             <a href="#" class=" btn btn-primary btn-rounded" >
-                                Buy Tickets Now
+                                Register Now
                             </a>
                         </div>
                     </div>
@@ -100,12 +100,12 @@
                             <h2 class="cover-title">
                                 Prepare yourself for the
                             </h2>
-                            <strong class="cover-xl-text">conference</strong>
+                            <strong class="cover-xl-text">Dance Mania</strong>
                             <p class="cover-date">
-                                12-14 February 2018  - Los Angeles, CA.
+                                1st March 2021  - XLRI, Jamshedpur.
                             </p>
                             <a href="#" class=" btn btn-primary btn-rounded" >
-                                Buy Tickets Now
+                                Register Now
                             </a>
                         </div>
                     </div>
@@ -120,12 +120,12 @@
                             <h2 class="cover-title">
                                 Prepare yourself for the
                             </h2>
-                            <strong class="cover-xl-text">conference</strong>
+                            <strong class="cover-xl-text">Dance Mania</strong>
                             <p class="cover-date">
-                                12-14 February 2018  - Los Angeles, CA.
+                                1st March 2021  - XLRI, Jamshedpur.
                             </p>
                             <a href="#" class=" btn btn-primary btn-rounded" >
-                                Buy Tickets Now
+                                Register Now
                             </a>
                         </div>
                     </div>
@@ -155,7 +155,7 @@
                             DATE
                         </h5>
                         <p>
-                            12-14 february 2018
+                            1st March 2021
                         </p>
                     </div>
                 </div>
@@ -169,7 +169,7 @@
                             location
                         </h5>
                         <p>
-                            Los Angeles, CA.
+                            Football Ground, XLRI, Jamshedpur.
                         </p>
                     </div>
                 </div>
@@ -180,7 +180,7 @@
                     <i class="ion-ios-person-outline"></i>
                     <div class="content">
                         <h5 class="box_title">
-                            speakers
+                            judges
                         </h5>
                         <p>
                             Natalie James
