--- a/index.html
+++ b/index.html
@@ -235,12 +235,12 @@
         <div class="row justify-content-center">
             <div class="col-12 col-md-6">
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing eli. Integer iaculis in lacus a sollicitudin. Ut hendrerit hendrerit nisl a accumsan. Pellentesque convallis consectetur tortor id placerat. Curabitur a pulvinar nunc. Maecenas laoreet finibus lectus, at volutpat ligula euismod.
+                    Lose yourself to the music and dance like no one’s watching. The Danse Studio: Time to Revolutionize You and MAXI - Marketing Association of XLRI present- Dance Mania, kids’ group dance competition. 
                 </p>
             </div>
             <div class="col-12 col-md-6">
                 <p>
-                    In rhoncus massa nec  sollicitudin. Ut hendrerit hendrerit nisl a accumsan. Pellentesque convallis consectetur tortor id placerat. Curabitur a pulvinar nunc. Maecenas laoreet finibus lectus, at volutpat ligula euismod quis. Maecenas ornare, ex in malesuada tempus.
+                    Register your team as per the rules below and set the stage on fire with the oomph and pomp of your steps. We know that the steel city has many little masters!
                 </p>
             </div>
         </div>
