--- a/evento/index.html
+++ b/evento/index.html
@@ -53,7 +53,7 @@
                     <a class="nav-link " href="#">Events</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link " href="#">Register</a>
+                    <a class="nav-link " href="#">News</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link " href="#">Contact</a>
@@ -183,7 +183,8 @@
                             judges
                         </h5>
                         <p>
-                            Remo D'Souza, Geeta Kapoor and Terence Lewis
+                            Natalie James
+                            + guests
                         </p>
                     </div>
                 </div>
@@ -194,10 +195,10 @@
                     <i class="ion-ios-pricetag-outline"></i>
                     <div class="content">
                         <h5 class="box_title">
-                            deadline for registration
+                            tikets
                         </h5>
                         <p>
-                            31st January 2021
+                            $65 early bird
                         </p>
                     </div>
                 </div>
@@ -250,9 +251,9 @@
                 <div class="icon_box_one">
                     <i class="lnr lnr-mic"></i>
                     <div class="content">
-                        <h4>3 Judges</h4>
+                        <h4>9 Speakers</h4>
                         <p>
-                            The event will be judged by the dance gurus: Remo D'Souza, Geeta Kapoor and Terence Lewis.
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. In rhoncus massa nec graviante.
                         </p>
                         <a href="#">read more</a>
                     </div>
@@ -263,9 +264,9 @@
                 <div class="icon_box_one">
                     <i class="lnr lnr-rocket"></i>
                     <div class="content">
-                        <h4>2 rounds to fight it out</h4>
+                        <h4>8 hrs Marathon</h4>
                         <p>
-                            Event would consist of 2 rounds: a 5 minutes group performance and then 1-on-1 faceoff.
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. In rhoncus massa nec graviante.
                         </p>
                         <a href="#">read more</a>
                     </div>
@@ -278,7 +279,7 @@
                     <div class="content">
                         <h4>Live Broadcast</h4>
                         <p>
-                            The event would be broadcasted live on MAXI's Youtube channel.
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. In rhoncus massa nec graviante.
                         </p>
                         <a href="#">read more</a>
                     </div>
@@ -289,9 +290,9 @@
                 <div class="icon_box_one">
                     <i class="lnr lnr-clock"></i>
                     <div class="content">
-                        <h4>Exciting Prizes</h4>
+                        <h4>Early Bird</h4>
                         <p>
-                            The winning team will get a cash prize of Rs.50,000. 
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. In rhoncus massa nec graviante.
                         </p>
                         <a href="#">read more</a>
                     </div>
@@ -309,41 +310,96 @@
     <div class="container">
         <div class="section_title mb50">
             <h3 class="title">
-               our judges
+               our speakers
             </h3>
         </div>
     </div>
     <div class="row justify-content-center no-gutters">
-        <div class="col-md-4 col-sm-6">
+        <div class="col-md-3 col-sm-6">
             <div class="speaker_box">
                 <div class="speaker_img">
-                    <img src="assets/img/speakers/s1.jpg" alt="speaker name">
+                    <img src="assets/img/speakers/s1.png" alt="speaker name">
                     <div class="info_box">
-                        <h5 class="name">Remo D'Souza</h5>
-                        <p class="position">Dancer, choreographer, actor and film director</p>
+                        <h5 class="name">Patricia Stone</h5>
+                        <p class="position">CEO Company</p>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="col-md-4 col-sm-6">
+        <div class="col-md-3 col-sm-6">
             <div class="speaker_box">
                 <div class="speaker_img">
-                    <img src="assets/img/speakers/s2.jpg" alt="speaker name">
+                    <img src="assets/img/speakers/s2.png" alt="speaker name">
                     <div class="info_box">
-                        <h5 class="name">Geeta Kapoor</h5>
-                        <p class="position">Choreographer</p>
+                        <h5 class="name">James Oliver</h5>
+                        <p class="position">CEO Company</p>
                     </div>
                 </div>
             </div>
 
         </div>
-        <div class="col-md-4 col-sm-6">
+        <div class="col-md-3 col-sm-6">
             <div class="speaker_box">
                 <div class="speaker_img">
-                    <img src="assets/img/speakers/s3.jpg" alt="speaker name">
+                    <img src="assets/img/speakers/s3.png" alt="speaker name">
                     <div class="info_box">
-                        <h5 class="name">Terence Lewis</h5>
-                        <p class="position">Dancer and choreographer</p>
+                        <h5 class="name">Carla Banks</h5>
+                        <p class="position">CEO Company</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-3 col-sm-6">
+            <div class="speaker_box">
+                <div class="speaker_img">
+                    <img src="assets/img/speakers/s4.png" alt="speaker name">
+                    <div class="info_box">
+                        <h5 class="name">William Smith</h5>
+                        <p class="position">CEO Company</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-3 col-sm-6">
+            <div class="speaker_box">
+                <div class="speaker_img">
+                    <img src="assets/img/speakers/s5.png" alt="speaker name">
+                    <div class="info_box">
+                        <h5 class="name">Jessica Black</h5>
+                        <p class="position">CEO Company</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-3 col-sm-6">
+            <div class="speaker_box">
+                <div class="speaker_img">
+                    <img src="assets/img/speakers/s6.png" alt="speaker name">
+                    <div class="info_box">
+                        <h5 class="name">Patricia Stone</h5>
+                        <p class="position">CEO Company</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-3 col-sm-6">
+            <div class="speaker_box">
+                <div class="speaker_img">
+                    <img src="assets/img/speakers/s7.png" alt="speaker name">
+                    <div class="info_box">
+                        <h5 class="name">Duncan Stan</h5>
+                        <p class="position">CEO Company</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-3 col-sm-6">
+            <div class="speaker_box">
+                <div class="speaker_img">
+                    <img src="assets/img/speakers/s8.png" alt="speaker name">
+                    <div class="info_box">
+                        <h5 class="name">Patricia Stone</h5>
+                        <p class="position">CEO Company</p>
                     </div>
                 </div>
             </div>
@@ -517,7 +573,7 @@
                     </td>
                     <td class="event_date">
                         3
-                        <span>March</span>
+                        <span>February</span>
                     </td>
                     <td>
                         <div class="event_place">
@@ -589,6 +645,26 @@
     </div>
 </section>
 <!--brands section end-->
+
+<!--get tickets section -->
+<section class="bg-img pt100 pb100" style="background-image: url('assets/img/bg/tickets.png');">
+    <div class="container">
+        <div class="section_title mb30">
+            <h3 class="title color-light">
+                GEt your tikets
+            </h3>
+        </div>
+        <div class="row justify-content-center align-items-center">
+            <div class="col-md-9 text-md-left text-center color-light">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. In rhoncus massa nec gravida tempus. Integer iaculis in aazzzCurabitur a pulvinar nunc. Maecenas laoreet finibus lectus, at volutpat ligula euismod.
+            </div>
+            <div class="col-md-3 text-md-right text-center">
+                <a href="#" class="btn btn-primary btn-rounded mt30">buy now</a>
+            </div>
+        </div>
+    </div>
+</section>
+<!--get tickets section end-->
 
 <!--footer start -->
 <footer>
@@ -711,8 +787,9 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-6 col-12">
-                <p>
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved by MAXI</p>
+                <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
             </div>
             <div class="col-12 col-md-6 ">
                 <ul class="footer_menu">
@@ -720,13 +797,13 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
                         <a href="#">Home</a>
                     </li>
                     <li>
-                        <a href="#">Judges</a>
+                        <a href="#">Speakers</a>
                     </li>
                     <li>
                         <a href="#">Events</a>
                     </li>
                     <li>
-                        <a href="#">Register</a>
+                        <a href="#">News</a>
                     </li>
                     <li>
                         <a href="#">Contact</a>
