--- a/index.html
+++ b/index.html
@@ -362,110 +362,24 @@
         </div>
 
         <div class="row justify-content-center">
-            <div class="col-md-4 col-12">
-                <div class="price_box active">
-                    <div class="price_highlight">
-                        recommended
-                    </div>
-                   <div class="price_header">
-                       <h4>
-                           Early Bird
-                       </h4>
-                       <h6>
-                           For the fast ones
-                       </h6>
-                   </div>
-                    <div class="price_tag">
-                        65 <sup>$</sup>
-                    </div>
-                    <div class="price_features">
-                        <ul>
-                            <li>
-                                Early Entrance
-                            </li>
-                            <li>
-                                Front seat
-                            </li>
-                            <li>
-                                Complementary Drinks
-                            </li>
-                            <li>
-                                Promo Gift
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="price_footer">
-                        <a href="#" class="btn btn-primary btn-rounded">Purchase</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4 col-12">
-                <div class="price_box">
-                    <div class="price_header">
-                        <h4>
-                            Start up
-                        </h4>
-                        <h6>
-                            For the begginers
-                        </h6>
-                    </div>
-                    <div class="price_tag">
-                        85 <sup>$</sup>
-                    </div>
-                    <div class="price_features">
-                        <ul>
-                            <li>
-                                Early Entrance
-                            </li>
-                            <li>
-                                Front seat
-                            </li>
-                            <li>
-                                Complementary Drinks
-                            </li>
-                            <li>
-                                Promo Gift
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="price_footer">
-                        <a href="#" class="btn btn-primary btn-rounded">Purchase</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4 col-12">
-                <div class="price_box">
-                    <div class="price_header">
-                        <h4>
-                            Corporate
-                        </h4>
-                        <h6>
-                            For the business
-                        </h6>
-                    </div>
-                    <div class="price_tag">
-                        95 <sup>$</sup>
-                    </div>
-                    <div class="price_features">
-                        <ul>
-                            <li>
-                                Early Entrance
-                            </li>
-                            <li>
-                                Front seat
-                            </li>
-                            <li>
-                                Complementary Drinks
-                            </li>
-                            <li>
-                                Promo Gift
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="price_footer">
-                        <a href="#" class="btn btn-primary btn-rounded">Purchase</a>
-                    </div>
-                </div>
+            <div class="col-md-12 col-12">
+                <form id="test-form">
+                  <div>
+                    <label>Name</label>
+                    <input type="text" name="Name" placeholder="name"/>
+                  </div>
+                  <div>
+                    <label>ID</label>
+                    <input type="text" name="ID" placeholder="BJxxxx/Hxxxx"/>
+                  </div>
+                  <div>
+                    <label>TeamSize</label>
+                    <input type="text" name="TeamSize" placeholder="1-30"/>
+                  </div>
+                  <div>
+                    <button type="submit"id="submit-form">Submit</button>
+                  </div>
+                </form>
             </div>
         </div>
     </div>
@@ -679,28 +593,16 @@
                         </h4>
                     </div>
                     <div class="footer_box_body">
-                        <form id="test-form">
+                        <form id="test-foot">
   
   <div>
-    <label>Name</label>
-    <input type="text" name="Name" placeholder="name"/>
-  </div>
-
-  <div>
-    <label>ID</label>
-    <input type="text" name="ID" placeholder="BJxxxx/Hxxxx"/>
-  </div>
-  
-  <div>
-    <label>TeamSize</label>
-    <input type="text" name="TeamSize" placeholder="1-3"/>
+    <label>email id</label>
+    <input type="text" name="email" placeholder="abc@xyz.com"/>
   </div>
 
   <div>
     <button type="submit"id="submit-form">Submit</button>
   </div>
-
-</form>
                     </div>
                 </div>
             </div>
