--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
         <a class="navbar-brand logo" href="#">
             <img src="assets/img/logo.png" alt="Evento"/>
         </a>
+        <a class="navbar-brand logo" href="#">
+            <img src="assets/img/hit-logo.png" alt="Evento"/>
+        </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#headernav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="lnr lnr-text-align-right"></span>
         </button>
@@ -357,7 +360,7 @@
     <div class="container">
         <div class="section_title mb50">
             <h3 class="title">
-                Pricing table
+                Register
             </h3>
         </div>
 
@@ -365,16 +368,16 @@
             <div class="col-md-12 col-12">
                 <form id="test-form">
                   <div>
-                    <label>Name</label>
-                    <input type="text" name="Name" placeholder="name"/>
+                    <label class="col-md-3 col-12">Name</label>
+                    <input type="text" name="Name" placeholder="name" class="col-md-6 col-12"/>
                   </div>
                   <div>
-                    <label>ID</label>
-                    <input type="text" name="ID" placeholder="BJxxxx/Hxxxx"/>
+                    <label class="col-md-3 col-12">ID</label>
+                    <input type="text" name="ID" placeholder="BJxxxx/Hxxxx" class="col-md-6 col-12"/>
                   </div>
                   <div>
-                    <label>TeamSize</label>
-                    <input type="text" name="TeamSize" placeholder="1-30"/>
+                    <label class="col-md-3 col-12">TeamSize</label>
+                    <input type="text" name="TeamSize" placeholder="1-30" class="col-md-6 col-12"/>
                   </div>
                   <div>
                     <button type="submit"id="submit-form">Submit</button>
@@ -514,6 +517,9 @@
                     <div class="footer_header">
                         <div class="footer_logo">
                             <img src="assets/img/logo.png" alt="evento">
+                        </div>
+                        <div class="footer_logo">
+                            <img src="assets/img/hit-logo.png" alt="evento">
                         </div>
                     </div>
                     <div class="footer_box_body">
