--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
 <header class="header navbar fixed-top navbar-expand-md">
     <div class="container">
         <a class="navbar-brand logo" href="#">
-            <img src="assets/img/logo.png" alt="Evento"/>
+            <img src="assets/img/logo.png" alt="Maxi"/>
         </a>
         <a class="navbar-brand logo" href="#">
-            <img src="assets/img/hit-logo.png" alt="Evento"/>
+            <img src="assets/img/hit-logo.png" alt="Hit"/>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#headernav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="lnr lnr-text-align-right"></span>
