--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
                     <input type="text" name="TeamSize" placeholder="1-30" class="col-md-6 col-12"/>
                   </div>
                   <div>
-                    <button type="submit"id="submit-form">Submit</button>
+                    <button type="submit"id="submit-form" class="btn btn-primary btn-rounded">Submit</button>
                   </div>
                 </form>
             </div>
@@ -484,6 +484,9 @@
             <h3 class="title">
                 our partners
             </h3>
+        </div>
+        <div class="brand_item text-center">
+                <img src="assets/img/brands/b0.png" alt="brand">
         </div>
         <div class="brand_carousel owl-carousel">
             <div class="brand_item text-center">
