--- a/index.html
+++ b/index.html
@@ -610,7 +610,7 @@
   </div>
 
   <div>
-    <button type="submit"id="submit-form">Submit</button>
+    <button type="submit"id="submit-form" class="btn btn-primary btn-rounded">Submit</button>
   </div>
                     </div>
                 </div>
