--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <a class="navbar-brand logo" href="#">
             <img src="assets/img/logo.png" alt="Maxi"/>
         </a>
-        <a class="navbar-brand logo" href="#">
+        <a class="navbar-brand logo" href="www.godrejhit.com">
             <img src="assets/img/hit-logo.png" alt="Hit"/>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#headernav" aria-expanded="false" aria-label="Toggle navigation">
@@ -485,8 +485,14 @@
                 our partners
             </h3>
         </div>
-        <div class="brand_item text-center">
-                <img src="assets/img/brands/b0.png" alt="brand">
+        <a href="www.godrejhit.com">
+            <h5>Title Sponsor</h5>
+            <div class="brand_item text-center">
+                    <img src="assets/img/brands/b0.png" alt="brand">
+            </div>
+        </a>
+        <div>
+            <h5>Silver Sponsors</h5>
         </div>
         <div class="brand_carousel owl-carousel">
             <div class="brand_item text-center">
@@ -526,24 +532,12 @@
                         </div>
                     </div>
                     <div class="footer_box_body">
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. In rhoncus massa nec gravida tempus. Integer iaculis in aazzzCurabitur a pulvinar nunc. Maecenas laoreet finibus lectus, at volutpat ligula euismod.
-                        </p>
                         <ul class="footer_social">
                             <li>
-                                <a href="#"><i class="ion-social-pinterest"></i></a>
+                                <a href="https://www.facebook.com/maxifairxlri/"><i class="ion-social-facebook"></i></a>
                             </li>
                             <li>
-                                <a href="#"><i class="ion-social-facebook"></i></a>
-                            </li>
-                            <li>
-                                <a href="#"><i class="ion-social-twitter"></i></a>
-                            </li>
-                            <li>
-                                <a href="#"><i class="ion-social-dribbble"></i></a>
-                            </li>
-                            <li>
-                                <a href="#"><i class="ion-social-instagram"></i></a>
+                                <a href="https://www.instagram.com/maxi.xlri/"><i class="ion-social-instagram"></i></a>
                             </li>
                         </ul>
                     </div>
@@ -601,17 +595,15 @@
                             subscribe to our newsletter
                         </h4>
                     </div>
-                    <div class="footer_box_body">
-                        <form id="test-foot">
-  
-  <div>
-    <label>email id</label>
-    <input type="text" name="email" placeholder="abc@xyz.com"/>
-  </div>
+                    <div class="footer_box_body">  
+                          <div>
+                            <label>email id</label>
+                            <input type="text" name="email" placeholder="abc@xyz.com"/>
+                          </div>
 
-  <div>
-    <button type="submit"id="submit-form" class="btn btn-primary btn-rounded">Submit</button>
-  </div>
+                          <div>
+                            <button type="submit"id="submit-form" class="btn btn-primary btn-rounded">Submit</button>
+                          </div>
                     </div>
                 </div>
             </div>
@@ -623,7 +615,7 @@
         <div class="row justify-content-center">
             <div class="col-md-6 col-12">
                 <p>
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved by MAXI</p>
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved by MAXI.</p>
             </div>
             <div class="col-12 col-md-6 ">
                 <ul class="footer_menu">
