--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <a class="navbar-brand logo" href="#">
             <img src="assets/img/logo.png" alt="Maxi"/>
         </a>
-        <a class="navbar-brand logo" href="www.godrejhit.com">
+        <a class="navbar-brand logo" href="https://www.godrejhit.com">
             <img src="assets/img/hit-logo.png" alt="Hit"/>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#headernav" aria-expanded="false" aria-label="Toggle navigation">
