--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@
                 our partners
             </h3>
         </div>
-        <a href="www.godrejhit.com">
+        <a href="https://www.godrejhit.com">
             <h5>Title Sponsor</h5>
             <div class="brand_item text-center">
                     <img src="assets/img/brands/b0.png" alt="brand">
